--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,11 @@
+
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
+/* Styling the HTML elements */
 body {
     background-color: #d9dcd6;
 }
@@ -15,6 +17,7 @@ header {
     color: #ffffff;
 }
 
+/* Styling th elements within the footer */
 footer {
     padding: 30px;
     clear: both;
@@ -26,6 +29,7 @@ footer h2 {
     font-size: 20px;
 }
 
+/* Styling th elements within the header */
 header h1 {
     display: inline-block;
     font-size: 48px;
@@ -58,6 +62,7 @@ p {
     font-size: 16px;
 }
 
+/* Styling the classes used in application */
 .hero {
     height: 800px;
     width: 100%;
@@ -196,6 +201,7 @@ p {
     font-size: 36px;
 }
 
+/* Styling the id seo used in application */
 #seo {
     color: #d9dcd6;
 }
